style: add scrollbar styles for webkit, fixes #34

--- a/src/components/App/index.css
+++ b/src/components/App/index.css
@@ -1,5 +1,12 @@
 @import "vars.css";
 
+::-webkit-scrollbar {
+  width: 12px;
+}
+::-webkit-scrollbar-thumb {
+  background: $scrollbar-color;
+}
+
 @component App {
   font-family: Open Sans, sans-serif;
 
