--- a/src/vars.css
+++ b/src/vars.css
@@ -4,6 +4,7 @@ $muted-text-color: #777;
 $background-color: #151515;
 $background-hover-color: #111;
 $highlight-color: #9d2053;
+$scrollbar-color: #5f5f5f;
 
 /* Footer colours */
 $footer-border-color: #303036;
